<resources>
    <string name="app_name">DiamondXE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_search_diamond">Search Products</string>
    <string name="navigation_natural_diamond">Natural Diamond</string>
    <string name="navigation_lab_grown_diamond">Lab Grown Diamond</string>
    <string name="navigation_fancy_diamond">Fancy Colour Diamond</string>
    <string name="navigation_create_diamond">Create Diamond</string>
    <string name="navigation_franchise_with_us">Franchise with us</string>
    <string name="navigation_Jewellery">Jewellery</string>
    <string name="navigation_rings">Rings</string>
    <string name="navigation_earrings">Earrings</string>
    <string name="navigation_pendent">Pendent</string>
    <string name="navigation_bracelets">Bracelets</string>
    <string name="navigation_bangles">Bangles</string>
    <string name="navigation_dxe_luxe">DXE LUXE</string>
    <string name="navigation_diamond_education">Diamond Education</string>
    <string name="navigation_explore_now">Explore Now</string>
    <string name="navigation_jeweller">Jeweller</string>
    <string name="navigation_supplier">Supplier</string>
    <string name="navigation_price_calculator">Price Calculator</string>
    <string name="navigation_more">More</string>
    <string name="navigation_about_us">About us</string>
    <string name="navigation_why_us">Why us</string>
    <string name="navigation_blogs">Blogs</string>
    <string name="navigation_media_gallery">Media Gallery</string>
    <string name="navigation_support">Support</string>
    <string name="navigation_faq">FAQ’s</string>
    <string name="navigation_terms_condition">Terms &amp; Conditions</string>
    <string name="navigation_privacy_policy">Privacy Policy</string>
    <string name="navigation_contact_us">Contact us</string>
    <string name="navigation_support_email">support@diamondxe.com</string>
    <string name="navigation_support_number">+91 9892003399</string>
    <string name="navigation_rate_us">Rate us</string>
    <string name="navigation_logout">Logout</string>
    <string name="navigation_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rings">Rings</string>
    <string name="solitaires">Solitaires</string>
    <string name="earrings">Earrings</string>
    <string name="pendant">Pendant</string>
    <string name="bracelet">Bracelet</string>
    <string name="bangles">Bangles</string>
    <string name="giftOfChoice">Gift of choice</string>
    <string name="newArrivals">New Arrivals</string>
    <string name="topDeals">Top Deals</string>
    <string name="naturalDiamonds">Natural Diamonds</string>
    <string name="labGrownDiamonds">Lab Grown Diamonds</string>
    <string name="diamondPromises">DiamondXE Promises</string>
    <string name="transParentPrices">Transparent Prices</string>
    <string name="noHiddenCosts">No hidden costs promote trustworthiness.</string>
    <string name="exchangeBuyBack">100% Return &amp; Exchange</string>
    <string name="reliableAfterSales">Reliable after sales support to ensure confident purchases.</string>
    <string name="certificationLabs">Certification by Trusted Labs</string>
    <string name="diamondsCertified">Diamonds &amp; Gold certified by gradting laboratories like GIA,  IGI &amp; BIS Hallmark.</string>
    <string name="doorStepDelivery">Insured doorstep delivery</string>
    <string name="buyRiskFree">Buy risk-free with secured delivery from our hands to yours.</string>
    <string name="customerSupport">Dedicated Customer Support</string>
    <string name="assistanceEveryStep">Assistance at every step for a personalised buying experience.</string>
    <string name="mediaSpotlight">Media Spotlight</string>
    <string name="customerStories">Customer stories</string>
    <string name="bottomBarHome">Home</string>
    <string name="bottomBarCalc">Calculator</string>
    <string name="bottomBarCategories">Category</string>
    <string name="bottomBarWish">Wishlist</string>
    <string name="bottomBarCart">Cart</string>
    <string name="bottomBarAccount">Account</string>
    <string name="navigationcalc">Price Calculator</string>
    <string name="viewAllNews"><u>View All News</u></string>
    <string name="hello_guest">Hello Guest!!!</string>
    <string name="version_name">Version</string>
    <string name="search_gemestone_hint">Search Gemstone</string>
    <string name="search_diamond_hint">Search diamond</string>
    <string name="natural">Natural</string>
    <string name="lab_grown">Lab Grown</string>
    <string name="shape">Shapes</string>
    <string name="diamond_quality">Diamond Quality</string>
    <string name="best">Best</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="price">Price</string>
    <string name="from_with_currency">From</string>
    <string name="to_with_currency">To</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="carat">Carat</string>
    <string name="color_text">Color</string>
    <string name="white_text">White</string>
    <string name="fancy_text">Fancy</string>
    <string name="clarity">Clarity</string>
    <string name="certificate">Certificate</string>
    <string name="fluorescence">Fluorescence</string>
    <string name="make">Make</string>
    <string name="returnable">Returnable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="advance_filters">Advance Filters</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="cut">Cut</string>
    <string name="polish">Polish</string>
    <string name="symmetry">Symmetry</string>
    <string name="technology">Technology</string>
    <string name="fancy_color_intensity">Fancy Color Intensity</string>
    <string name="select_intensity">Select Intensity</string>
    <string name="fancy_color_overtone">Fancy Color Overtone</string>
    <string name="select_overtone">Select Overtone</string>
    <string name="table_string">Table%</string>
    <string name="from_string">%From</string>
    <string name="to_string">%To</string>
    <string name="depth_string">Depth%</string>
    <string name="length_string">Length</string>
    <string name="width_string">Width</string>
    <string name="depth_string1">Depth</string>
    <string name="mm_from">mm From</string>
    <string name="mm_to">mm To</string>
    <string name="crown_string">Crown °</string>
    <string name="from_string1">From °</string>
    <string name="to_string1">To °</string>
    <string name="pavillion_string">Pavillion °</string>
    <string name="lot_id">Lot ID</string>
    <string name="location">Location</string>
    <string name="location_hint">ex: Mumbai, Dubai, Indore, UAE</string>
    <string name="eye_clean">Eye Clean</string>
    <string name="shade">Shade</string>
    <string name="luster">Luster</string>
    <string name="search_result">Search Result</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="diamond_type">Diamond Type</string>
    <string name="filter_applied">Filter Applied</string>
    <string name="recently_added">Recently Added</string>
    <string name="price_low_high">Price(Low to High)</string>
    <string name="price_high_low">Price(High to Low)</string>
    <string name="size_low_high">Size(Low to High)</string>
    <string name="size_high_low">Size(High to Low)</string>
    <string name="return_policy">Returnable within 7 days,\n T&amp;C apply.</string>
    <string name="no_result_found">No result found</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="noofferavailable">No offer available</string>
    <string name="allofferforyou">All offers for you</string>
    <string name="diamond_details">Diamond Details</string>
    <string name="gemstone_details">Gemstone Details</string>
    <string name="product_details">Product Details</string>
    <string name="shipping_taxes_extra">Shipping &amp; Taxes extra</string>
    <string name="reserve_diamond">Reserve Diamond</string>
    <string name="select_pin_code">Select Pin-Code</string>
    <string name="select">Select</string>
    <string name="measurerements">Measurements</string>
    <string name="table_string1">Table</string>
    <string name="crown_height">Crown Height</string>
    <string name="crown_angle">Crown Angle °</string>
    <string name="pavilion_depth">Pavilion Depth</string>
    <string name="pavilion_angle">Pavilion Angle °</string>
    <string name="additional_details">Additional Details</string>
    <string name="grille_condition_cult">Girdle Condition</string>
    <string name="culet">Culet</string>
    <string name="growth_type">Growth Type</string>
    <string name="inclusions">Inclusions</string>
    <string name="status">Status</string>
    <string name="key_to_symbole">Key to Symbols</string>
    <string name="remark">Remark</string>
    <string name="report_comments">Report Comments</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="enter_pin_code">Enter your PinCode</string>
    <string name="pincode_empowers_msg">The pincode empowers us to deliver your shipment seamlessly and reliably.</string>
    <string name="locate_me"><u>Locate me</u></string>
    <string name="submit">Submit</string>
    <string name="image">Image</string>
    <string name="view_360">360° View</string>
    <string name="size">Size</string>
    <string name="diamond_image">Diamond Image</string>
    <string name="diamond_images">Diamond Images</string>
    <string name="diamond_size_preview">Diamond Size Preview</string>
    <string name="diamond_video">Diamond Video</string>
    <string name="delivering_to">Delivering to</string>
    <string name="change">Change</string>
    <string name="reference_purpose_only">*for reference purpose only (Weight in carat)</string>
    <string name="discover_happiness_here">Discover happiness here</string>
    <string name="browser_our_collection">Browse our collection and find the perfect piece to brighten your day!</string>
    <string name="tax_and_fee">Including Taxes &amp; Fee</string>
    <string name="termscondition">*T&amp;C apply</string>
    <string name="excluding_and_taxes_shipping">excluding taxes &amp; shipping</string>
    <string name="include_taxesfees">Include taxes &amp; Fees</string>
    <string name="document_type">Document Type</string>
    <string name="document_status">Status</string>
    <string name="submitted_date">Submitted Date</string>
    <string name="title_menu">Menu</string>
    <string name="txt_igi_report">IGI Report</string>
    <string name="txt_gia_report">GIA Report</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_currency">Currency</string>
    <string name="txt_usd">$ USD</string>
    <string name="txt_base_currency">Base currency</string>
    <string name="txt_rapnet_login">Rapnet Login</string>
    <string name="txt_app_version">App version V%s</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="txt_btn_add">Add</string>
    <string name="txt_eur">EUR</string>
    <string name="purity">Purity</string>
    <string name="rategm">Rate/gm</string>
    <string name="enternotes">Enter your notes..</string>
    <string name="additionalinfo">Additional Info</string>
    <string name="mainsolitaore_note">Main Solitaire Notes</string>
    <string name="goldrate">Gold Rate</string>
    <string name="sharenow">Share Now</string>
    <string name="txt_24kt">24kt</string>
    <string name="txt_22kt">22kt</string>
    <string name="txt_18kt">18kt</string>
    <string name="txt_14kt">14kt</string>
    <string name="txt_9kt">9kt</string>
</resources>