<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F3F3F6"
    >

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_app_version"
        android:textColor="@color/color_4C4E57" />

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?selectableItemBackground"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:padding="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_menu"
            android:textColor="@color/color_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_currency"
                style="@style/MenuTextView"
                android:background="?selectableItemBackground"
                android:drawableStart="@drawable/currency"
                android:text="@string/txt_currency" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_usd"
                    android:textSize="16sp"
                    android:layout_gravity="right"
                    android:textColor="@color/color_4C4E57"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_base_currency"
                    android:textSize="14sp"
                    android:textColor="@color/color_4C4E57"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/color_C3C4C7" />

        <TextView
            android:id="@+id/label_igi_report"
            style="@style/MenuTextView"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/igi_report"
            android:text="@string/txt_igi_report" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/color_C3C4C7" />

        <TextView
            android:id="@+id/label_gia_report"
            style="@style/MenuTextView"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/gia_report"
            android:text="@string/txt_gia_report" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/color_C3C4C7" />

        <TextView
            android:id="@+id/label_rapnet_login"
            style="@style/MenuTextView"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/rapnet_login"
            android:text="@string/txt_rapnet_login"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:visibility="gone"
            android:background="@color/color_C3C4C7" />

        <TextView
            android:id="@+id/label_logout"
            style="@style/MenuTextView"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/logout"
            android:visibility="gone"
            android:text="@string/txt_logout" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:visibility="gone"
            android:background="@color/color_C3C4C7" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>